[project]
name = "mysound"
version = "1.0.0"
description = "Spotify recommender for you"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.0.0",
    "fuzzywuzzy>=0.18.0",
    "musicbrainzngs>=0.7.1",
    "numpy>=2.3.2",
    "pre-commit>=4.3.0",
    "pylistenbrainz>=0.5.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "requests-oauthlib>=2.0.0",
    "scikit-learn>=1.7.1",
    "spotipy>=2.25.1",
    "tqdm>=4.67.1",
]

[tool.isort]
known_third_party = ["dotenv", "fuzzywuzzy", "musicbrainzngs", "numpy", "requests", "sklearn", "spotipy", "tqdm"]
